--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,6 @@
 test:
   override:
-    - bundle exec rake
+    - bundle exec rake --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec.xml
 machine:
   ruby:
     version: 2.2.4
-# Enable xcode below if you need macOS
-#   xcode:
-#     version: "7.3"
