--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 test:
   override:
-    - bundle exec rake --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec.xml
+    - bundle exec rake
 machine:
   ruby:
     version: 2.2.4
