--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 test:
   override:
-    - bundle exec rake
+    - bundle exec rake SPEC_OPTS="--require spec_helper --color --format d --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec.xml"
 machine:
   ruby:
     version: 2.2.4
